# deepmop

./: LICENSE  Makefile  README.md  config.yml  environment.yml  pyproject.toml
hspc/: config.py  model.py
models/: attention_aware_DL_model_1.keras
notebooks/: 09-tabpfn_iucu_git.ipynb  10-tabpfn_dip_trimmed.ipynb  11-multihead_NN.ipynb  12-tabpfn_FD_domain.ipynb  13-CIBMTR_attn.ipynb  14-AttentionAware_DL.ipynb  14-AttentionAware_DL_git.ipynb  15-DiPersio_ALL.ipynb  15-DiPersio_ALL_git.ipynb  16-DiPersio_Trimmed.ipynb  16-DiPersio_Trimmed_git.ipynb
